--- a/assets/css/bootsnav.css
+++ b/assets/css/bootsnav.css
@@ -210,7 +210,7 @@ li.close-full-menu{
 =================================*/
 .attr-nav{
     float: right;
-    display: inline-block;
+    display: block;
     margin-left: 13px;
     margin-right: -15px;
 }
@@ -1006,7 +1006,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
     }
     
     nav.navbar.bootsnav .navbar-toggle {
-        display: inline-block;
+        display: block;
         float: left;
         margin-right: -200px;
         margin-top: 10px;
@@ -1259,7 +1259,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
     }
     
     nav.bootsnav.navbar-full .navbar-toggle {
-        display: inline-block;
+        display: block;
         float: right;
         margin-right: 0;
         margin-top: 10px;
@@ -1280,7 +1280,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
     /* Tabs
     =================================*/ 
     nav.navbar.bootsnav .megamenu-content.tabbed{
-        padding-left: 0 !mportant;
+        padding-left: 0 important;
     }
     
     nav.navbar.bootsnav .tabbed > li{
